2000-11-28  Mark Mitchell  <mark@codesourcery.com>

	* doc/design/qmtest/core.xml: Fix DocBook syntax errors.
	* doc/design/qmtest/impl.xml: Likewise.
	* doc/design/qmtest/qmtest.xml: Likewise.
	* doc/design/qmtest/refs.xml: Likewise.
	* doc/design/qmtest/req.xml: Likewise.
	* doc/design/qmtest/design.html: Remove.

2000-11-27  Benjamin Chelf  <chelf@codesourcery.com>

	* doc/design/qmtrack/qmtrack.xml: Add user-interface.xml.
	* doc/design/qmtrack/user-api.xml: Fix typos.
	* doc/design/qmtrack/user-interface.xml: New file.

2000-11-26  Alex Samuel  <samuel@codesourcery.com>
	
	* doc/design/qmtrack/idb-api.xml: Add missing </section> tag.
	
2000-11-26  Alex Samuel  <samuel@codesourcery.com>

	* doc/design/qmtrack/concepts.xml: Continue.
	* doc/design/qmtrack/idb-api.xml: Likewise.

2000-11-25  Benjamin Chelf  <chelf@codesourcery.com>

	* doc/design/qmtrack/user-api.xml: Make style changes. Update
	based on conversations with Alex.

2000-11-20  Alex Samuel  <samuel@codesourcery.com>

	* doc/design/qmtest/req.xml: New file.

2000-11-20  Alex Samuel  <samuel@codesourcery.com>

	* README.sources: Add discussion of doc strings.

2000-11-20  Benjamin Chelf  <chelf@codesourcery.com>

	* doc/design/qmtrack/qmtrack.xml: Added user-api.xml.
	* doc/design/qmtrack/user-api.xml: New file.

2000-11-16  Alex Samuel  <samuel@codesourcery.com>

	* doc/concept: New directory.
	* doc/concept/sapcat: Likewise.
	* doc/design/qmconfig/*: Surgically move all repository files to...
	* doc/concept/sapcat/*: ... here.

2000-11-10  Alex Samuel  <samuel@codesourcery.com>

	* standard.mk (docbook-html): Fix files to tidy.

2000-11-10  Alex Samuel  <samuel@codesourcery.com>

	Conversion to DocBook.
	
	* standard.mk (TIDYFLAGS): Use one-space indent.
	(JADE): New variable.
	(JADEEXTRA): Likewise.
	(SGMLDIRS): Likewise.
	(HTMLSS): Likewise.
	(PRINTSS): Likewise.
	(NULLSTIRNG): Likewise.
	(SPACE): Likewise.
	(doc): New rule.
	(doc-html): New rule, conditionally.
	(doc-print): Likewise.